Switch to GFM and add link to logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: 'en-US' }}">
 
 <head>
     <meta charset='utf-8'>
@@ -20,7 +20,7 @@
         <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
         {% endif %}
 
-        <p><img src="{{ 'assets/images/creek.png' | relative_url}}"/></p>
+        <p><a href="{{ '/' | relative_url }}"><img src="{{ 'assets/images/creek.png' | relative_url }}"/></a></p>
         <h2 id="project_tagline">Quickly build & test an ecosystem of microservices</h2>
 
         {% if site.show_downloads %}
